--- a/YouTubeAssist/App.xaml
+++ b/YouTubeAssist/App.xaml
@@ -7,7 +7,8 @@
         <ResourceDictionary>
             <!-- Merge the resource dictionary containing the icon -->
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Dictionary.xaml"/>
+                <ResourceDictionary Source="Resources/Images.xaml"/>
+                <ResourceDictionary Source="Resources/Styles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
