--- a/YouTubeAssist/Resources/Images.xaml
+++ b/YouTubeAssist/Resources/Images.xaml
@@ -1,4 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <BitmapImage x:Key="WinIcon" UriSource="pack://application:,,,/Assets/Images/icon_256x256.ico"/>
+    <BitmapImage x:Key="NoResultImg" UriSource="pack://application:,,,/Assets/Images/no_result_256.png"/>
 </ResourceDictionary>
