--- a/YouTubeAssist/UI/SearchView.xaml
+++ b/YouTubeAssist/UI/SearchView.xaml
@@ -9,7 +9,8 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <UserControl.Resources>
-        <localUtils:NullConverter x:Key="UINullConverter" />
+        <localUtils:NullStringConverter x:Key="UINullStringConverter" />
+        <localUtils:NullImageUrlConverter x:Key="UINullImageUrlConverter" />
         <DataTemplate x:Key="NoResultTemplate">
             <local:NoResult />
         </DataTemplate>
@@ -18,6 +19,7 @@
         </DataTemplate>
         <DataTemplate x:Key="HasResultTemplate">
             <StackPanel Orientation="Vertical">
+                <Image Height="64" Width="64" Source="{Binding Path=ThumbUrl, Converter={StaticResource UINullImageUrlConverter}}" HorizontalAlignment="Left"/>
                 <Label x:Name="ChannelID_Label" Content="Channel ID" />
                 <TextBox AutomationProperties.LabeledBy="{Binding ElementName=ChannelID_Label}" Text="{Binding Path=ID}" IsReadOnly="True" MinWidth="100" />
                 <Label x:Name="ChannelTitle_Label" Content="Channel Title" />
@@ -25,9 +27,11 @@
                 <Label x:Name="ChannelDescription_Label" Content="Channel Description" />
                 <TextBox AutomationProperties.LabeledBy="{Binding ElementName=ChannelDescription_Label}" Text="{Binding Path=Description}" IsReadOnly="True" MinWidth="100" />
                 <Label x:Name="ChannelCustomUrl_Label" Content="Channel Url" />
-                <TextBox AutomationProperties.LabeledBy="{Binding ElementName=ChannelCustomUrl_Label}" Text="{Binding Path=CustomUrl, Converter={StaticResource UINullConverter}}" IsReadOnly="True" MinWidth="100" />
-                <Label x:Name="ChannelThumbUrl_Label" Content="Channel ThumbUrl" />
-                <TextBox AutomationProperties.LabeledBy="{Binding ElementName=ChannelThumbUrl_Label}" Text="{Binding Path=ThumbUrl, Converter={StaticResource UINullConverter}}" IsReadOnly="True" MinWidth="100" />
+                <TextBlock AutomationProperties.LabeledBy="{Binding ElementName=ChannelCustomUrl_Label}">
+                    <Hyperlink NavigateUri="{Binding Path=CustomUrl, Converter={StaticResource UINullStringConverter}}" RequestNavigate="Hyperlink_RequestNavigate">
+                        <Run Text="{Binding Path=CustomUrl, Converter={StaticResource UINullStringConverter}}" />
+                    </Hyperlink>
+                </TextBlock>
                 <Label x:Name="ChannelCreateDate_Label" Content="Channel Create Date" />
                 <TextBox AutomationProperties.LabeledBy="{Binding ElementName=ChannelCreateDate_Label}" Text="{Binding Path=Date}" IsReadOnly="True" MinWidth="100" />
                 <Label x:Name="ChannelViewCount_Label" Content="Channel View Count" />
