--- a/YouTubeAssist/MainWindow.xaml
+++ b/YouTubeAssist/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:YouTubeAssist"
         xmlns:properties="clr-namespace:YouTubeAssist.Properties"
         mc:Ignorable="d"
-        Title="{x:Static properties:Resource.WinTitle}" Height="450" Width="800"
+        Title="Pipe_Test" Height="450" Width="800"
         Icon="{StaticResource WinIcon}">
     <Grid>
         <Grid.RowDefinitions>
