--- a/WebExt/src/popup/popup.scss
+++ b/WebExt/src/popup/popup.scss
@@ -2,46 +2,49 @@ body {
   width: 400px;
   height: 400px;
 
-  /* Style the tab */
   .tab {
-    overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
+    display: inline-flex;
+    justify-content: space-evenly;
+
+    button {
+      background-color: inherit;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      padding: 6px 6px;
+      transition: 0.3s;
+      width: 50%;
+
+      &:hover {
+        background-color: #ddd;
+      }
+
+      &:active {
+        background-color: #ccc;
+      }
+    }
+    .active {
+      background-color: #ccc;
+    }
   }
 
-  /* Style the buttons inside the tab */
-  .tab button {
-    background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
-    font-size: 17px;
+  #port-controls {
+    .port-btn {
+      margin: 4px;
+      cursor: pointer;
+    }
   }
 
-  /* Change background color of buttons on hover */
-  .tab button:hover {
-    background-color: #ddd;
-  }
-
-  /* Create an active/current tablink class */
-  .tab button.active {
-    background-color: #ccc;
-  }
-
-  /* Style the tab content */
-  .tabcontent {
+  .hide {
     display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
   }
 
   p {
     margin: 8px 0px;
   }
+
   .main-content-container {
     display: flex;
     flex-direction: column;
