--- a/YouTubeAssist/UI/PipeView.xaml
+++ b/YouTubeAssist/UI/PipeView.xaml
@@ -6,18 +6,59 @@
              xmlns:local="clr-namespace:YouTubeAssist.UI"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="400"/>
-            <ColumnDefinition Width="Auto" />
-        </Grid.ColumnDefinitions>
+    <Grid VerticalAlignment="Stretch">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
-        <StackPanel Grid.Column="0">
-            <Label x:Name="from_host_label" Content="From Host:" />
-            <TextBox x:Name="from_host_textBox" Style="{StaticResource BaseTextBoxStyle}"
-                     Text="{Binding Path=MessageIncome}"
-                     AutomationProperties.LabeledBy="{Binding ElementName=from_host_label}" TextWrapping="Wrap" HorizontalAlignment="Center" Width="300" Height="350" MaxLines="500"/>
+        <Grid Grid.Row="0" HorizontalAlignment="Stretch">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-        </StackPanel>
+            <Grid Grid.Row="0">
+                <Label x:Name="from_host_label" Content="From Host:"/>
+            </Grid>
+            <Grid Grid.Row="1" HorizontalAlignment="Stretch">
+                <TextBox x:Name="from_host_textBox"
+                         Style="{StaticResource BaseTextBoxStyle}"
+                         Text="{Binding Path=MessageIncome}"
+                         AutomationProperties.LabeledBy="{Binding ElementName=from_host_label}"
+                         TextWrapping="Wrap"
+                         HorizontalAlignment="Center"
+                         VerticalAlignment="Stretch"
+                         Width="700" Height="256"
+                         VerticalScrollBarVisibility="Auto"
+                         HorizontalScrollBarVisibility="Disabled"/>
+            </Grid>
+        </Grid>
+
+        <Grid Grid.Row="1" HorizontalAlignment="Stretch">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
+                <Label x:Name="to_host_label" Content="To Host:"/>
+            </Grid>
+            <Grid Grid.Row="1">
+                <TextBox x:Name="to_host_textBox"
+                         Style="{StaticResource BaseTextBoxStyle}"
+                         Text="{Binding Path=MessageOutput}"
+                         AutomationProperties.LabeledBy="{Binding ElementName=to_host_label}"
+                         TextWrapping="NoWrap"
+                         HorizontalAlignment="Center"
+                         Width="700" Height="Auto"
+                         MaxLines="1"
+                         VerticalScrollBarVisibility="Disabled"
+                         HorizontalScrollBarVisibility="Auto"/>
+            </Grid>
+            <Grid Grid.Row="2">
+                <Button Content="Submit" Width="100" Margin="10" Click="Send_Button_Click" />
+            </Grid>
+        </Grid>
     </Grid>
 </UserControl>
