--- a/Web/src/WebApp/public/index.scss
+++ b/Web/src/WebApp/public/index.scss
@@ -1,3 +1,65 @@
 body {
-  font-size: large;
+  .main-content-container {
+    transform: translate(0, 100%);
+    display: flex;
+    flex-direction: column;
+    margin: 0px 1rem;
+    height: 100%;
+    h2 {
+      text-align: center;
+      margin: 10px 0px;
+    }
+
+    .authenticate-container {
+      margin-top: 6px;
+
+      .normal {
+        background-color: lightblue;
+      }
+
+      .success {
+        background-color: lightgreen;
+      }
+
+      .fail {
+        background-color: lightpink;
+      }
+      button {
+        cursor: pointer;
+        height: 2rem;
+        display: flex;
+        align-items: center;
+        margin: auto;
+
+        #auth-btn-text {
+          margin: 0px 6px;
+        }
+
+        .hide {
+          display: none;
+        }
+        .show {
+          display: inline-block
+        }
+        .loader {
+          width: 1.2rem;
+          height: 1.2rem;
+          border: 3px solid #0e0e0e;
+          border-bottom-color: transparent;
+          border-radius: 50%;
+          box-sizing: border-box;
+          animation: rotation 1s linear infinite;
+        }
+      
+        @keyframes rotation {
+          0% {
+              transform: rotate(0deg);
+          }
+          100% {
+              transform: rotate(360deg);
+          }
+        }
+      }
+    }
+  }
 }
