--- a/YouTubeAssist/MainWindow.xaml
+++ b/YouTubeAssist/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:YouTubeAssist"
         xmlns:properties="clr-namespace:YouTubeAssist.Properties"
         mc:Ignorable="d"
-        Title="Pipe_Test" Height="450" Width="800"
+        Title="{x:Static properties:Resource.WinTitle}" Height="450" Width="800"
         Icon="{StaticResource WinIcon}">
     <Grid>
         <Grid.RowDefinitions>
@@ -18,6 +18,7 @@
             <Menu DockPanel.Dock="Top">
                 <MenuItem Name="Search_MenuItem" Header="_Search" Click="Search_MenuItem_Click" />
                 <MenuItem Name="Notifications_MenuItem" Header="_Notifications" Click="Notifications_MenuItem_Click" />
+                <MenuItem Name="Pipes_MenuItem" Header="_Pipes" Click="Pipes_MenuItem_Click"/>
                 <MenuItem Name="About_MenuItem" Header="_About" Click="About_MenuItem_Click" />
             </Menu>
         </DockPanel>
